--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home Base</title>
-</head>
-<body>
-    <h1>{% url 'home' %} Django Blog </h1>
+  <head>
 
-<div>
-    {% block content %}
-    {% endblock content %}
-</div>
-</body>
+    <meta charset="UTF-8" />
+    <title>Home Base</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400"
+      rel="styleshee\
+t"
+    />
+  </head>
+  <body>
+    <h1> Django Blog</a></h1>
+    <hr>
+    <div>{% block content %} {% endblock content %}</div>
+  </body>
 </html>
