--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,13 @@ t"
     />
   </head>
   <body>
-    <h1><a href=" {% url 'home' %} ">Django Blog</a></h1>
+    <div class="nav-left">
+      <a href=" {% url 'home' %} ">Django Blog</a>
+    </div>
+    <div class="nav-right">
+      <a href="{% url 'post_new' %}">+ Create New BLog Post</a>
+    </div>
     <hr />
-    <div>{% block content %} {% endblock content %}</div>
+    {% block content %} {% endblock content %}
   </body>
 </html>
