--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Post Detail</title>
+    <title>Update the Post ;</title>
   </head>
   <body>
     {% block content %}
-    <div class="post-entry">
-      <h2>{{ post.title }}</h2>
-      <p>{{ post.body }}</p>
-      <a href="{% url 'post_update' post.id %}">
-        ++ Edit this Post
-      </a>
+    <div>
+      <form action="{% url 'post_update' object.pk %}" method="post">
+        {% csrf_token%} {{ form.as_p }}
+        <input type="submit" value="Edit" />
+      </form>
     </div>
     {% endblock content %}
   </body>
