--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,11 @@
     {% block content %} {% for post in object_list %}
 
     <div>
-      <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
+      <h2>
+        <a href="{% url 'post_detail' post.pk %}">
+          {{ post.title }}
+        </a>
+      </h2>
       <p>{{ post.body }}</p>
     </div>
 
